cf_analysis_results/checkerframework_results/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8.txt
../../../../datasets/june2020_dataset/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/RecordGen.java:44: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-12 $$ java.io.FileReader $$ possible exceptional exit due to lnr.skip(Long.MAX_VALUE) with exception type java.io.IOException $$ ( 1482, 1520 ) $$ @MustCall method close may not have been invoked on temp-var-12 or any of its aliases.
    	 LineNumberReader  lnr = new LineNumberReader(new FileReader(new File("bugIds.log")));
    	                                              ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to lnr.skip(Long.MAX_VALUE) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1559: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-326 $$ java.io.Writer $$ regular method exit $$ ( 52317, 52346 ) $$ @MustCall method close may not have been invoked on temp-var-326 or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1561: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-327 $$ java.io.Writer $$ regular method exit $$ ( 52421, 52449 ) $$ @MustCall method close may not have been invoked on temp-var-327 or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/JSONArray.java:903: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-499 $$ java.io.Writer $$ regular method exit $$ ( 29067, 29096 ) $$ @MustCall method close may not have been invoked on temp-var-499 or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/JSONArray.java:905: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-500 $$ java.io.Writer $$ regular method exit $$ ( 29171, 29199 ) $$ @MustCall method close may not have been invoked on temp-var-500 or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:474: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1082 $$ java.io.Writer $$ possible exceptional exit due to XML.toJSONObject(s) with exception type org.json.JSONException $$ ( 23975, 24002 ) $$ @MustCall method close may not have been invoked on temp-var-1082 or any of its aliases.
            System.out.println(j.write(new StringWriter()));
                                      ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: possible exceptional exit due to XML.toJSONObject(s) with exception type org.json.JSONException
../../../../datasets/june2020_dataset/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/MyProperties.java:31: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1670 $$ java.io.FileInputStream $$ possible exceptional exit due to prop.load(new FileInputStream(propFile)) with exception type java.io.IOException $$ ( 887, 916 ) $$ @MustCall method close may not have been invoked on temp-var-1670 or any of its aliases.
    		prop.load(new FileInputStream(propFile));
    		          ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to prop.load(new FileInputStream(propFile)) with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors
